--- a/start.css
+++ b/start.css
@@ -27,7 +27,7 @@ ul li a {
     text-decoration: none;
     color: #e7e7e7;
     text-align: center;
-    padding: 1rem 4rem;
+    padding: 1rem 4em;
 }
 
 ul li a:hover {
